[Fix] 가독성을 해치는 CSS 속성 수정 & ArticleWrite Description default value 생성 (#87)
* fix[#86] : layout shift 를 일으키는 ArticleSidebar font-bold 제거

* fix[#86] : 다크모드 배경색 수정

* fix[#86] : 인라인 코드 블록 border 설정

* fix[#86] : ArticleWriteDescrpition 컴포넌트 value 값 생성

- 수정하거나 할 때 기본 값이 필요하다.

* fix[#86] : footer 제목 마진 바텀 추가

* feat[#86] : 다크모드 selection bg 색상 추가

* fix[#86] : textarea className 오타 수정

--- a/blog/app/globals.css
+++ b/blog/app/globals.css
@@ -5,8 +5,8 @@
 :root {
   --white: #ffffff;
   --secondary-white: #f0f0f0;
-  --black: #000000;
-  --gray-dark: #121212;
+  --black: #161616;
+  --gray-dark: #212121;
 
   --bg-primary: var(--white);
   --bg-secondary: var(--secondary-white);
@@ -25,13 +25,9 @@
   --shadow-light: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
   --shadow-dark:
     0 1px 3px rgba(255, 255, 255, 0.1), 0 1px 2px rgba(255, 255, 255, 0.06);
-}
 
-/* 글자 드래그 시 셀렉션 된 영역 배경 수정 */
-::selection {
-  background-color: #d3d3d3; /* 회색 배경 */
+  --selection-bg: #d3d3d3;
 }
-
 .dark {
   --bg-primary: var(--bg-dark-primary);
   --bg-secondary: var(--bg-dark-secondary);
@@ -40,6 +36,12 @@
   --text-tertiary: var(--text-dark-tertiary);
   --text-quaternary: var(--text-dark-quaternary);
   --shadow-light: var(--shadow-dark);
+  --selection-bg: #374151;
+}
+
+/* 글자 드래그 시 셀렉션 된 영역 배경 수정 */
+::selection {
+  background-color: var(--selection-bg);
 }
 
 h1 {
@@ -135,7 +137,7 @@ p {
   border-radius: 4px;
 }
 
-.paragraph > .code-block {
+:not(.pre-block) > .code-block {
   border: 1px solid var(--text-quaternary);
 }
 
@@ -157,7 +159,7 @@ p {
 }
 
 .unordered-list {
-  list-style-type: square; /* ul 태그의 기본 불릿 스타일 */
+  list-style-type: disc; /* ul 태그의 기본 불릿 스타일 */
 }
 
 .ordered-list {
